--- a/spring-boot-crud/src/main/resources/application.properties
+++ b/spring-boot-crud/src/main/resources/application.properties
@@ -9,6 +9,14 @@ spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=15
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
+
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 
@@ -18,8 +26,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 
-spring.data.elasticsearch.cluster-nodes=localhost:9200
-spring.data.elasticsearch.cluster-name=elasticsearch
-spring.data.elasticsearch.properties.port=9200
-spring.data.elasticsearch.properties.username=admin
-spring.data.elasticsearch.properties.password=admin123
+spring.elasticsearch.rest.uris=http://localhost:9200
+spring.elasticsearch.rest.cluster=elasticsearch
+spring.elasticsearch.rest.username=admin
+spring.elasticsearch.rest.password=admin123
+
