--- a/spring-boot-crud/pom.xml
+++ b/spring-boot-crud/pom.xml
@@ -12,8 +12,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
-        <relativePath/>
+        <version>2.7.0</version> <!-- Use the version you are targeting -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
@@ -53,7 +53,6 @@
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
 <!--        </dependency>-->
-
 
         <dependency>
             <groupId>org.springframework.data</groupId>
